feat: cf beacon

--- a/src/app.html
+++ b/src/app.html
@@ -9,4 +9,11 @@
 	<body data-sveltekit-preload-data="hover">
 		<div style="display: contents">%sveltekit.body%</div>
 	</body>
+	<!-- Cloudflare Web Analytics -->
+	<script
+		defer
+		src="https://static.cloudflareinsights.com/beacon.min.js"
+		data-cf-beacon='{"token": "d9ffbb955e684beeb7a271a48ccff239"}'
+	></script>
+	<!-- End Cloudflare Web Analytics -->
 </html>
